Fix dymanic-chart-data scrollbar - vnext

--- a/projects/app-lob/src/app/grid-dynamic-chart-data/grid-dynamic-chart-data.component.scss
+++ b/projects/app-lob/src/app/grid-dynamic-chart-data/grid-dynamic-chart-data.component.scss
@@ -115,7 +115,7 @@
     .tabs-container {
         margin-left: -1.5rem;
         margin-right: -1.5rem;
-        margin-bottom: -1.4rem;
+        margin-bottom: -0.8rem;
         margin-top: -1rem;
     }
 
